# fastapi-webpage

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
fastapi_webpage/: __init__.py  error_middleware.py  webpage.py
