[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-webpage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "ujson>=5.11.0",
]
